# imagesizer

./: .gitignore  README.md  pyproject.toml
src/imagesizer/: __init__.py  compress_to_size.py
tests/: test1.py  test_compress_to_image.py  test_sample.py
