[project]
name = "imagesizer"
version = "0.1.0"
authors = [
  { name="Carl K", email="pigeons.want_2f@icloud.com" },
]
description = "A python package to resize images to a target file size"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pillow>=12.2.0",
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/carl-ks/imagesizer"

[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
    "vermin>=1.8.0",
]
